# topside-2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  configure.sh
cmake/: fetch_deps.cmake
lib/: CMakeLists.txt
pi_nodes/motor_driver/: CMakeCache.txt
pi_nodes/sensor_driver/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
src/: CMakeCache.txt  CMakeLists.txt
src/common/include/common/: ControllerMessages.hpp  SocketInformation.hpp  Unimplemented.hpp  Vector3.hpp
src/common/src/: CMakeLists.txt  Unimplemented.cpp
src/navigator_adaptor/: CMakeLists.txt  package.xml
src/navigator_adaptor/src/: navigator_adaptor.cpp
src/rov/: CMakeLists.txt
src/rov/control_loop/: CMakeLists.txt  main.c  pid.c  pid.h
src/rov/control_loop/include/control_loop/: pid.h  state.hpp  test.h
src/rov/control_loop/src/: main.c  main.cpp  pid.c  pid.cpp  state.cpp
src/rov/motor_driver/: CMakeLists.txt  motor_driver.cpp
src/rov/motor_driver/src/: CMakeLists.txt  motor_driver.cpp
src/rov/pi_nodes/motor_driver/: CMakeLists.txt  Makefile  cmake_install.cmake  motor_driver.h
src/rov/pi_nodes/sensor_driver/: sensor_driver.cpp
src/rov/sensor_driver/: CMakeLists.txt  sensor_driver.cpp
src/rov/sensor_driver/include/: ePressure.h  sensors.h
src/rov/sensor_driver/src/: CMakeLists.txt  ePressure.cpp  pressure.cpp  sensor_driver.cpp
src/src/rov/motor_driver/src/: motor_test.cpp
src/topside/: CMakeLists.txt
src/topside/controller/: CMakeLists.txt  controller-driver.py  controller.cpp  controller.h  controller_parser.cpp  controller_parser.h  controls_interpreter.cpp  controls_interpreter.h  main.cpp  motor_math.py  v_math  v_math.cpp
src/topside/controller/buils/: CMakeCache.txt  Makefile  cmake_install.cmake
src/topside/controller/include/controller/: Controller.hpp  ControllerInput.hpp  ControllerManager.hpp  InputFunctions.hpp  Joystick.hpp  LogitechF310Mappings.hpp  StickInterpreter.hpp  controller.hpp  controls_interpreter.hpp  v_math.hpp
src/topside/controller/src/: CMakeLists.txt  Controller.cpp  ControllerManager.cpp  InputFunctions.cpp  StickInterpreter.cpp  controller.cpp  controls_interpreter.cpp  main.cpp  v_math.cpp
src/topside/controller/src/ControllerManager/: AxisHandlers.cpp  ButtonHandlers.cpp  InputVisitor.cpp
